// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-spinner default 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_medium"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;

exports[`lightning-spinner size=large 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_large"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;

exports[`lightning-spinner size=medium 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_medium"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;

exports[`lightning-spinner size=small 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_small"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;

exports[`lightning-spinner variant=base 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_medium"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;

exports[`lightning-spinner variant=brand 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_brand slds-spinner_medium"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;

exports[`lightning-spinner variant=inverse 1`] = `
<lightning-spinner
  class="slds-spinner_container"
>
  #shadow-root(open)
    <div
      class="slds-spinner slds-spinner_inverse slds-spinner_medium"
      role="status"
    >
      <span
        class="slds-assistive-text"
      >
        required alternative text
      </span>
      <div
        class="slds-spinner__dot-a"
      />
      <div
        class="slds-spinner__dot-b"
      />
    </div>
</lightning-spinner>
`;
